[gd_scene load_steps=5 format=3 uid="uid://cmpxtgpcq5kb6"]

[ext_resource type="StyleBox" uid="uid://h5lfpv36tccw" path="res://scenes/menus/modals/GeneralModalButtonNormal.tres" id="1_b548h"]
[ext_resource type="Script" path="res://scenes/menus/modals/general_modal.gd" id="1_xkd6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exy8m"]
bg_color = Color(0.866667, 0.866667, 0.835294, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0862745, 0.584314, 0.666667, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx65b"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.431373, 0.431373, 0.431373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GeneralModal" type="Control"]
z_index = 100
z_as_relative = false
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkd6x")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_exy8m")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.243137, 0.243137, 1)
theme_override_font_sizes/font_size = 28
text = "This is a label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="Content" type="RichTextLabel" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "This is going to be your message!

Feel free to write stuff inside. Feel free to write stuff inside. Feel free to write stuff inside. Feel free to write stuff inside. Feel free to write stuff inside. Feel free to write stuff inside."

[node name="ButtonSection" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonSection"]
layout_mode = 2

[node name="ButtonGroup" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonSection/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonSection/CenterContainer/ButtonGroup"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_b548h")
theme_override_styles/hover = SubResource("StyleBoxFlat_xx65b")
theme_override_styles/pressed = ExtResource("1_b548h")
text = "Close"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ButtonSection/CenterContainer/ButtonGroup/Button" to="." method="_on_button_pressed"]
